# tare

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.yml  install.sh  llms.txt  mkdocs.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  crates-io.yml  docker.yml  docs.yml  python.yml  release.yml
.vexp/: manifest.json
crates/cull-bench/: Cargo.toml
crates/cull-bench/adapters/: headroom_adapter.py  llmlingua2.py
crates/cull-bench/benchmarks/: answer_equivalence.py  headroom_vs_cull.py  qa_accuracy_4way.py  real_trace_corpus.py  three_way.py
crates/cull-bench/src/: lib.rs  main.rs
crates/cull-cache/: Cargo.toml
crates/cull-cache/src/: lib.rs
crates/cull-cli/: Cargo.toml
crates/cull-cli/src/: lib.rs  main.rs
crates/cull-cli/tests/: cli.rs
crates/cull-core/: Cargo.toml
crates/cull-core/examples/: skeletonize.rs
crates/cull-core/src/: code.rs  code_skeleton.rs  embed.rs  embed_neural.rs  emit.rs  engine.rs  json_crush.rs  lib.rs  log_crush.rs  lossy_compact.rs  plan.rs  planner.rs  predicate.rs  protected.rs  schema_slim.rs  segment.rs  segmenter.rs  session.rs  task.rs  telegraphic.rs
crates/cull-core/src/passes/: dedup.rs  envelope.rs  ivm.rs  json_compaction.rs  log_compaction.rs  mod.rs  reasoning.rs  relevance.rs  salience.rs  supersession.rs
crates/cull-core/tests/: pipeline.rs
crates/cull-mcp/: Cargo.toml
crates/cull-mcp/src/: main.rs
crates/cull-proxy/: Cargo.toml
crates/cull-proxy/src/: count.rs  lib.rs  main.rs  monitor.rs  server.rs
crates/cull-proxy/tests/: proxy.rs
crates/cull-tokenize/: Cargo.toml
crates/cull-tokenize/src/: lib.rs
crates/tare-bench/: Cargo.toml  run_proof.py
crates/tare-bench/adapters/: headroom_adapter.py  llmlingua2.py
crates/tare-bench/benchmarks/: answer_equivalence.py  headroom_vs_tare.py  qa_accuracy_4way.py  real_trace_corpus.py  three_way.py
crates/tare-bench/corpus/: agent_context.json  cargo_metadata.json  ps_aux.txt
crates/tare-bench/corpus/code/: json_crush.rs  server.rs
crates/tare-bench/results/: proof.json  proof_table.md
crates/tare-bench/src/: lib.rs  main.rs
crates/tare-cache/: Cargo.toml
crates/tare-cache/src/: lib.rs
crates/tare-cli/: Cargo.toml
crates/tare-cli/src/: admin.rs  dashboard.rs  doctor.rs  learn.rs  lib.rs  main.rs  output_savings.rs  perf.rs  update.rs  wrap.rs
crates/tare-cli/tests/: cli.rs
crates/tare-core/: Cargo.toml
crates/tare-core/examples/: skeletonize.rs
crates/tare-core/proptest-regressions/: json_crush.txt
crates/tare-core/src/: code.rs  code_skeleton.rs  csv_compact.rs  embed.rs  embed_neural.rs  emit.rs  html_compact.rs  image_deref.rs  json_crush.rs  lib.rs  lossy_compact.rs  plan.rs  predicate.rs  profile.rs  protected.rs  relevance.rs  schema_slim.rs  segmenter.rs
crates/tare-core/src/passes/: dedup.rs  envelope.rs  ivm.rs  json_compaction.rs  log_compaction.rs  reasoning.rs  relevance.rs
crates/tare-core/tests/: pipeline.rs
crates/tare-mcp/: Cargo.toml
crates/tare-mcp/src/: main.rs
crates/tare-memory/: Cargo.toml
crates/tare-memory/src/: lib.rs
crates/tare-proxy/: Cargo.toml
crates/tare-proxy/src/: count.rs  lib.rs  main.rs  monitor.rs  server.rs
crates/tare-proxy/tests/: proxy.rs
crates/tare-py/: Cargo.toml  build.rs  pyproject.toml
crates/tare-py/python/tare/: __init__.py  integrations.py
crates/tare-py/src/: lib.rs
crates/tare-py/tests/: test_integrations.py
crates/tare-tokenize/: Cargo.toml
crates/tare-tokenize/src/: lib.rs
docs/: architecture.md  benchmarks.md  cli.md  getting-started.md  index.md  integrations.md
docs/assets/: demo.tape
docs/superpowers/: COMPLETENESS.md
docs/superpowers/plans/: 2026-06-18-cull-01-foundation.md  2026-06-18-cull-02-cache-planner-invariants.md  2026-06-18-cull-03-structural-drop-passes.md  2026-06-18-cull-04-query-relevance-pass.md  2026-06-18-cull-05-emitter.md  2026-06-18-cull-06-cli.md  2026-06-18-cull-07-replace-model.md  2026-06-18-cull-08-ivm-delta.md  2026-06-18-cull-09-eviction.md  2026-06-18-cull-10-proxy-transform.md  2026-06-18-cull-11-proxy-server.md  2026-06-18-cull-12-benchmark.md  2026-06-18-cull-13-proxy-full-engine.md  2026-06-18-cull-14-quality-floor.md  2026-06-18-cull-15-envelope-dedup.md  2026-06-18-cull-16-transitive-slice.md  2026-06-18-cull-17-treesitter-symbols.md  2026-06-18-cull-18-reasoning-trace.md  2026-06-18-cull-19-belady-arc.md  2026-06-18-cull-20-array-toolresult.md  2026-06-18-cull-21-openai.md  2026-06-18-cull-22-cache-boundary.md  2026-06-18-cull-23-predicate-pushdown.md  2026-06-18-cull-24-hitrate-monitor.md  2026-06-18-cull-25-session-threading.md  2026-06-18-cull-26-bench-depth.md  2026-06-18-cull-27-embedding-salience.md  2026-06-18-cull-28-count-tokens.md  2026-06-18-cull-29-incumbent-seam.md
docs/superpowers/specs/: 2026-06-18-cull-design.md  2026-06-18-winnow-design.md
npm/: README.md  install.js  package.json
npm/src/: adapters.js
npm/test/: adapters.test.js
scripts/: live-smoke-sub.sh  live-smoke.sh
