[workspace]
resolver = "2"
members = [
    "crates/cull-core",
    "crates/cull-tokenize",
    "crates/cull-cache",
    "crates/cull-proxy",
    "crates/cull-bench",
    "crates/cull-cli",
    "crates/cull-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Query-aware, cache-correct, lossless-by-default context compression for LLM coding agents."
repository = "https://github.com/mstuart/cull"
homepage = "https://github.com/mstuart/cull"
readme = "README.md"
authors = ["Mark Stuart <mstuart@users.noreply.github.com>"]
keywords = ["llm", "context", "compression", "proxy", "tokens"]
categories = ["command-line-utilities", "network-programming", "compression"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tiktoken-rs = "0.6"
