[workspace]
resolver = "2"
members = [
    "crates/tare-core",
    "crates/tare-tokenize",
    "crates/tare-cache",
    "crates/tare-proxy",
    "crates/tare-bench",
    "crates/tare-cli",
    "crates/tare-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Query-aware, cache-correct, lossless-by-default context compression for LLM coding agents."
repository = "https://github.com/mstuart/tare"
homepage = "https://github.com/mstuart/tare"
readme = "README.md"
authors = ["Mark Stuart <stuartmark@gmail.com>"]
keywords = ["llm", "context", "compression", "proxy", "tokens"]
categories = ["command-line-utilities", "network-programming", "compression"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tiktoken-rs = "0.6"
