[package]
name = "cull-cli"
version = "0.0.0"
edition.workspace = true

[[bin]]
name = "cull"
path = "src/main.rs"

[lib]
name = "cull_cli"
path = "src/lib.rs"

[dependencies]
cull-core = { path = "../cull-core" }
cull-tokenize = { path = "../cull-tokenize" }
serde = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
