[package]
name = "cull-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line interface for Cull — query-aware, cache-correct context compression."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cull"
path = "src/main.rs"

[lib]
name = "cull_cli"
path = "src/lib.rs"

[dependencies]
cull-core = { path = "../cull-core", version = "0.1.0" }
cull-tokenize = { path = "../cull-tokenize", version = "0.1.0" }
serde = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
