[package]
name = "cull-core"
version = "0.0.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
regex = { workspace = true }
xxhash-rust = { workspace = true }
cull-tokenize = { path = "../cull-tokenize" }
diffy = "0.4"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

[dev-dependencies]
serde_json = "1"
