[package]
name = "cull-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Model Context Protocol (stdio) server exposing Cull's compression tools and a reversible expand tool."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cull-mcp"
path = "src/main.rs"

[dependencies]
cull-core = { path = "../cull-core", version = "0.1.0" }
cull-cli = { path = "../cull-cli", version = "0.1.0" }
serde = { workspace = true }
serde_json = "1"
