[package]
name = "cull-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTTP proxy with a closed-loop, output-aware compression controller for LLM coding agents (Cull)."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cull-proxy"
path = "src/main.rs"

[dependencies]
cull-cache = { path = "../cull-cache" }
cull-core = { path = "../cull-core" }
cull-tokenize = { path = "../cull-tokenize" }
serde = { workspace = true }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
bytes = "1"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
