[package]
name = "cull-tokenize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Fast approximate token counting used by Cull's compression decisions."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
