[package]
name = "tare-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line interface for Tare — query-aware, cache-correct context compression."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tare"
path = "src/main.rs"

[lib]
name = "tare_cli"
path = "src/lib.rs"

[dependencies]
tare-core = { path = "../tare-core", version = "0.1.0" }
tare-tokenize = { path = "../tare-tokenize", version = "0.1.0" }
serde = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
