[package]
name = "tare-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core context-compression engine for Tare: lossless + opt-in lossy transforms and AST code skeletonization."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
neural-embed = ["dep:fastembed", "dep:anyhow"]

[dependencies]
serde = { workspace = true }
serde_json = "1"
regex = { workspace = true }
xxhash-rust = { workspace = true }
tare-tokenize = { path = "../tare-tokenize", version = "0.1.0" }
diffy = "0.4"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
fastembed = { version = "5", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
