[package]
name = "tare-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTTP proxy with a closed-loop, output-aware compression controller for LLM coding agents (Tare)."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tare-proxy"
path = "src/main.rs"

[dependencies]
tare-cache = { path = "../tare-cache", version = "0.2.0" }
tare-core = { path = "../tare-core", version = "0.2.0" }
tare-tokenize = { path = "../tare-tokenize", version = "0.2.0" }
serde = { workspace = true }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
bytes = "1"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
